ghc-4335c07/testsuite/tests/indexed-types/should_compile/Simple20.hs
{-# LANGUAGE TypeFamilies #-}

module ShouldCompile where

type family F a 
type instance F [a] = [F a]

foo :: (F [a] ~ a) => a
foo = undefined
